git ignore update

--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
 	"prefix": "!",
-	"token": "NDYyMDU3MjM3MDI0NzM1MjMz.Dhcapg.f7Do3JzFOSbizagYFxsgLSS4BsI"
+	"token": "NDYyMDU3MjM3MDI0NzM1MjMz.XQ1zjw.3KTCXKbqlJUCk4Bsa3xc6GMQvk4"
 }
