--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
 	"prefix": "!",
-	"token": "NDYyMDU3MjM3MDI0NzM1MjMz.XQ1zjw.3KTCXKbqlJUCk4Bsa3xc6GMQvk4"
+	"token": "NDYyMDU3MjM3MDI0NzM1MjMz.XWtADA.s-L9ZlF3Vd9baPcrOCIjYaItD6w"
 }
